<resources>
    <string name="app_name">TaskMessanger</string>

    <string name="hello_world">Hello world!</string>

    <!-- Actions -->
    <string name="action_done">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new_task">Create new task</string>

    <!--Task strings -->
    <string name="task_label">NEW EVENT</string>
    <string name="task_label_edit">CORRECTION OF EVENT</string>
    <string name="label_date">Date</string>
    <string name="label_alarm_time">Alarm</string>
    <string name="label_reminder">Reminder</string>
    <string name="label_link_to">Contact with</string>
    <string name="label_task_date">The reminder is scheduled to run on:</string>
    <string name="label_task_details">Details</string>
    <string name="toast_prompt_task_title">Please enter a name for the reminder</string>
    <string name="toast_task_name">Nem</string>
    <string name="hint_new_task_title">Name of event</string>
    <string name ="hint_type_task_desc">Description</string>
    <string name="hint_alarm">Include</string>
    <string name="hint_alarm_time">Choose reminder time</string>
    <string name="toast_time_picker">Select hour</string>
</resources>
