<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_task_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:inputType="textMultiLine"
                android:enabled="true"
                android:textSize="24sp"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_view_name_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/edit_task_name"
                android:textColor="@android:color/darker_gray"
                android:text="@string/hint_new_task_title" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/label_task_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_date"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edit_task_calendar"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/label_task_date"
                android:layout_alignParentRight="true"
                android:enabled="true"
                android:textSize="24sp"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/label_alarm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/label_reminder"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/label_alarm"
                android:layout_below="@+id/label_alarm"
                android:layout_marginTop="0dp"
                android:text="@string/hint_alarm"
                android:textColor="@android:color/darker_gray"/>


            <Switch
                android:id="@+id/switch1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/label_alarm"
                android:layout_toRightOf="@+id/label_alarm"
                android:gravity="left"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/label_alarm_time"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/label_alarm_time"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/reminder_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/label_alarm_time"
                android:enabled="true"
                android:layout_alignParentRight="true"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/reminder_spinner"
                android:gravity="left"
                android:textColor="@android:color/darker_gray"
                android:text="@string/hint_alarm_time" />




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/label_link_to"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/label_link_to"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_link_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/label_link_to"
                android:layout_below="@+id/label_link_to"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/label_link_to"
                android:textColor="@android:color/darker_gray"/>

            <Spinner
                android:id="@+id/hives_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/label_link_to"
                android:layout_toRightOf="@+id/label_link_to"
                android:gravity="left"
                android:textSize="20sp"
                android:textColorHint="@android:color/darker_gray"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/desc_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom|clip_vertical"
            android:layout_weight="0.35"
            android:hint="@string/hint_type_task_desc"
            android:enabled="true"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textMultiLine">

            <requestFocus />
        </EditText>
    </LinearLayout>
</LinearLayout>